--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "auth": {	
         "registry.cn-shenzhen.aliyuncs.com": {
-            "username": "USER",
-            "password": "PASS"
+            "username": "aliyun3506373365",
+            "password": "Abc@1234"
         }
     },
     "images": {
